# DSA_2026_elmelet

./: README.md
HashTable/: CMakeLists.txt  functions.c  functions.h  main.c
HashTable__1/: CMakeLists.txt  functions_hash.c  functions_hash.h  main.c
Parcialis model Array/Het6/: CMakeLists.txt  airport.c  airport.h  airportArray.c  main.c
Parcialis model Queue/het6/: fuggvenyek.txt  orders.txt
Parcialis model Queue/het6/labor6/: CMakeLists.txt
Parcialis model Queue/het6/labor6/src/: main.c  queue.c
Parcialis model Stack/: fuggvenyek_PlateStack.txt  plates.txt
Parcialis model Stack/parc_model_stack/: CMakeLists.txt  function.c  function.h  main.c
Parcialis model/het6/: order_one.txt
ParcialisTeszt/: CMakeLists.txt  functions.c  functions.h  functions_stack.c  functions_stack.h  main.c
array_stack_queue/: CMakeLists.txt  constants.h  functions_array.c  functions_array.h  functions_queue.c  functions_stack.c  functions_stack.h  main.c
binarysearchtree/: CMakeLists.txt  functions.c  functions.h  main.c
binarytree/: CMakeLists.txt  functions.c  functions.h  main.c
double_list/: CMakeLists.txt  functions.c  functions.h  main.c
hasitas_lancolassal/: CMakeLists.txt  functions.c  functions.h  main.c  node.c  node.h
hasitas_nevszerint/: CMakeLists.txt  functions_hash.c  functions_hash.h  main.c
simple_list/: CMakeLists.txt  functions_simple_list.c  functions_simple_list.h  main.c
sorted_list/: CMakeLists.txt  function.c  function.h  main.c
tomb_struct/: CMakeLists.txt  functions_IntArray.c  functions_IntArray.h  main.c
(+17 files in other folders)
